force-app/main/default/objects/ConnectBillingCAsh__c/ConnectBillingCAsh__c.object-meta.xml
<CustomObject>
    <label>WMS Bill+Cash</label>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>WMS BILL+CASH ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WMS Bill+Cash</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>