force-app/main/default/objects/ConnectBillingCAsh__c/fields/BillingID__c.field-meta.xml
<CustomField>
    <fullName>BillingID__c</fullName>
    <label>BILLING ID</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipName>ConnectBillingCash</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>