force-app/main/default/objects/ConnectBillingCAsh__c/fields/CashID__c.field-meta.xml
<CustomField>
    <fullName>CashID__c</fullName>
    <label>CASH ID</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipName>ConnectBillingCash</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>