force-app/main/default/objects/ConnectBillingCAsh__c/fields/CashRollupStatu__c.field-meta.xml
<CustomField>
    <fullName>CashRollupStatu__c</fullName>
    <label>CASH ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>