force-app/main/default/objects/ConnectBillingCAsh__c/fields/UnpaidBalanceOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingLocal__c</fullName>
    <formula>BillingID__r.UnpaidBalanceOfBuyingLocal__c</formula>
    <label>UNPAID BALANCE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>