force-app/main/default/objects/ConnectBillingCAsh__c/fields/UnreceivedBalanceOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfSellingLocal__c</fullName>
    <formula>BillingID__r.UnreceivedBalanceLocal__c</formula>
    <label>UNRECEIVED BALANCE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>