force-app/main/default/objects/ConnectBillingCAsh__c/fields/WMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>WMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>WMS UNPAID BAL OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>