force-app/main/default/objects/ConnectBillingCAsh__c/fields/WMSUnreceivedBalOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>WMSUnreceivedBalOfSellingLocal__c</fullName>
    <label>WMS UNRECEIVED BAL OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>